[package]
name = "study_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "*"
tracing-subscriber = {version = "*", features = ["fmt", "std", "time"] }
time = {version = "*", features = ["local-offset", "macros"] }
criterion = "*"
anyhow = "*"


[lib]
name = "study_rust"
path = "src/lib.rs"

[[bench]]
name = "benchmark"
harness = false